<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">Több opció</string>
    <string name="abc_action_mode_done">Kész</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">KI</string>
    <string name="abc_capital_on">BE</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Keresés…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_crop_image">Crop 1:1</string>
    <string name="action_edit_intent_error">There is not available application to edit this media</string>
    <string name="action_gallery_burst_extract">Kibontás</string>
    <string name="action_gallery_create">Create Story</string>
    <string name="action_gallery_create_gif">Create animated GIF</string>
    <string name="action_gallery_delete">Törlés</string>
    <string name="action_gallery_edit">Szerkesztés</string>
    <string name="action_gallery_info">Információ</string>
    <string name="action_gallery_share">Megosztás</string>
    <string name="action_initial_scan">Rescan library</string>
    <string name="action_settings">Beállítások</string>
    <string name="action_slider_show_gallery">Galéria</string>
    <string name="app_name">Camera</string>
    <string name="app_summary">Copyright © 2016 – 2018, NFT Inc.</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audio_option_caption">Hang</string>
    <string name="backCameraNotFound">Hátsó kamera nem található</string>
    <string name="back_camera">Hátsó Kamera</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="burst_count_photos">%d Képek</string>
    <string name="burst_group_photos">Sorozatfelvétel csoport</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="compensation_option">Compensation Option</string>
    <string name="compose_panorama">Processing Panorama</string>
    <string name="countdown_option_caption">Countdown</string>
    <string name="criticalError">Critical Error Occurred! We are sorry for the inconvenience. Please send us an issue report in order to investigate this.</string>
    <string name="criticalErrorRestart">There is a problem with camera service, if problem persists please try restart your device.</string>
    <string name="date_today">Today</string>
    <string name="date_yesterday">Yesterday</string>
    <string name="default_web_client_id">762517032407-kmltiigeea4amk930j6fridr13e7vaae.apps.googleusercontent.com</string>
    <string name="device_storage">Device</string>
    <string name="distance">distance</string>
    <string name="donations">Támogass</string>
    <string name="enable_gps">Would you like to enable GPS?</string>
    <string name="error_delete_file">"Can't delete file %s"</string>
    <string name="error_loading_thumb">"Can't load media Information for this file"</string>
    <string name="error_loading_thumb_image">"Can't load thumbnail for this file"</string>
    <string name="exposure">exposure</string>
    <string name="exposure_option_caption">Exposure</string>
    <string name="exposure_rs_pnl">exposure</string>
    <string name="filechoose_cancel">Vissza</string>
    <string name="filechoose_reset">Reset</string>
    <string name="filechoose_select">Kiválasztás</string>
    <string name="filechooser_title">Select %s storage directory</string>
    <string name="fingerprint_cat_app_background">Alkalmazás a háttérbe</string>
    <string name="fingerprint_cat_app_foreground">Alkalmazás az előtérbe</string>
    <string name="fingerprint_service_description">"When it is on, you may assign fingerprint gestures (swipe up/down/left/right) to predefined actions in the app in order to easily perform basic operations. When the app is in the background the available actions are:
 • Open Photo camera
 • Open Video camera
 • Open Front Photo camera
 • Open Gallery
When the app is in foreground the available actions are:
 • Shutter button
 • Show filmstrip
 • Change Photo/Video mode
 • Change Back/Front camera
 • Navigation in filmstrip"</string>
    <string name="fingerprint_service_summary">Ujjlenyomatolvasó gesztusok</string>
    <string name="firebase_database_url">https://footej-camera-cf11d.firebaseio.com</string>
    <string name="focus_option_caption">Focus</string>
    <string name="focus_rs_pnl">distance</string>
    <string name="font_fontFamily_medium">sans-serif-medium</string>
    <string name="fps">FPS</string>
    <string name="frontCameraNotFound">"Front Facing Camera didn't found"</string>
    <string name="front_camera">Első Kamera</string>
    <string name="gain">db level</string>
    <string name="gallery">Galéria</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pref_description_brightness">Kényszeríti a maximum fényerőt a kamera előnézet közben</string>
    <string name="pref_description_gesture_enable">Enable accessibility service</string>
    <string name="pref_description_gesture_filmstrip_enable">Enable navigation in filmstrip</string>
    <string name="pref_description_manualfocuszoom">The preview zoomed in for a close-up of your subject</string>
    <string name="pref_description_shuttersounds">Engedélyezi vagy letiltja a zárhangokat</string>
    <string name="pref_header_about">Rólunk</string>
    <string name="pref_header_general">Általános</string>
    <string name="pref_header_photo">Fotó</string>
    <string name="pref_header_video">Videó</string>
    <string name="pref_licences">Nyílt forráskódu licenszek</string>
    <string name="pref_summary_author">https://www.NFT.hu</string>
    <string name="pref_summary_glide">https://github.com/bumptech/glide</string>
    <string name="pref_summary_google_icons">https://design.google.com/icons/</string>
    <string name="pref_summary_purchases">Nincs</string>
    <string name="pref_summary_support">Küldj visszajelzést, kérj segítséget vagy jelentsd a problémát</string>
    <string name="pref_summary_verticalseekbar">by LMartin</string>
    <string name="pref_summary_website">http://Martindroidapps.Camera</string>
    <string name="pref_title_antibanding">Csikozódáscsökkentés</string>
    <string name="pref_title_audiosrc">Hang Forrása</string>
    <string name="pref_title_author">NFT Inc.</string>
    <string name="pref_title_brightness">Kényszerítse a max Fényerőt</string>
    <string name="pref_title_burst">Sorozatfelvétel mód</string>
    <string name="pref_title_burstmodeinterval">Legkissebb idő</string>
    <string name="pref_title_burstmodemaximages">Legtöbb kép</string>
    <string name="pref_title_default_gallery">Használja az alapértelmezett Galéria appot</string>
    <string name="pref_title_deviceyear">Device Year Class</string>
    <string name="pref_title_filmstrip">FilmstripView</string>
    <string name="pref_title_fingerprint_swipe_down">Lefelé húzás</string>
    <string name="pref_title_fingerprint_swipe_left">Balra húzás</string>
    <string name="pref_title_fingerprint_swipe_right">Jobbra húzás</string>
    <string name="pref_title_fingerprint_swipe_up">Felfelé húzás</string>
    <string name="pref_title_flip_photos_front_camera">Flip photos from front camera</string>
    <string name="pref_title_focus_priority">Priority on Focus before take photo</string>
    <string name="pref_title_geolocation">Hely mentése</string>
    <string name="pref_title_gestures_enable">Engedélyezés</string>
    <string name="pref_title_gestures_filmstrip_enable">Filmstrip navigation</string>
    <string name="pref_title_gif_encoder">AnimatedGifEncoder</string>
    <string name="pref_title_gif_quality">Animált GIF Minősége</string>
    <string name="pref_title_glide">Glide</string>
    <string name="pref_title_google_icons">"Google's material design icons"</string>
    <string name="pref_title_infocommunity">Google+ Közösség</string>
    <string name="pref_title_infofbpage">Facebook oldal</string>
    <string name="pref_title_jpegquality">JPEG Minőség</string>
    <string name="pref_title_legalinfo">Jogi információk</string>
    <string name="pref_title_manualfocuszoom">Manual focus zoom</string>
    <string name="pref_title_maxduration">Max időtartam</string>
    <string name="pref_title_opencv">OpenCV</string>
    <string name="pref_title_photo_file_prefix">Filename prefix</string>
    <string name="pref_title_photosize_back">Hátsó kamera</string>
    <string name="pref_title_photosize_front">Első kamera</string>
    <string name="pref_title_privacy">Adatvédelmi irányelvek</string>
    <string name="pref_title_purchases">Vásárlások</string>
    <string name="pref_title_show_histogram">Show histogram</string>
    <string name="pref_title_shuttersounds">Zárhangok</string>
    <string name="pref_title_stabilization">Stabilizáció</string>
    <string name="pref_title_storage_photo">Storage location</string>
    <string name="pref_title_storage_video">Storage location</string>
    <string name="pref_title_support">Visszajelzés &amp; Segítség</string>
    <string name="pref_title_use_high_speed">Use high speed session when needed</string>
    <string name="pref_title_use_high_speed_desc">When slow motion is enabled a high speed session is used in order to get maximum fps. High speed session overrides selected recording size and disables manual controls.</string>
    <string name="pref_title_verticalseekbar">Vertical Seekbar</string>
    <string name="pref_title_video_file_prefix">Filename prefix</string>
    <string name="pref_title_video_quality">Videó minősége</string>
    <string name="pref_title_videosize_back">Hátsó kamera</string>
    <string name="pref_title_videosize_front">Első kamera</string>
    <string name="pref_title_volumekey">Hangerő gombok</string>
    <string name="pref_title_website">Weboldal</string>
    <string name="resolution">Felbontás</string>
    <string name="pref_camera_gesture_title">Gesztusok</string>
	<string name="double_tap">Dupla érintés</string>
	<string name="dark_theme">Sötét Téma</string>
	<string name="appsources">Alkalmazás forráskódját</string>
</resources>