<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference android:icon="@drawable/quantum_ic_place_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_title_geolocation" android:key="geolocation_enable" android:defaultValue="false" />
    <ListPreference android:icon="@drawable/monitor" android:entries="@array/pref_antibanding_titles" android:layout="@layout/preference_with_margin" android:title="@string/pref_title_antibanding" android:key="antibanding" android:defaultValue="1" android:entryValues="@array/pref_antibanding_values" />
    <ListPreference android:icon="@drawable/quantum_ic_insert_photo_grey600_24" android:entries="@array/pref_jpegquality_titles" android:layout="@layout/preference_with_margin" android:title="@string/pref_title_jpegquality" android:key="jpegQuality" android:defaultValue="90" android:entryValues="@array/pref_jpegquality_values" />
    <SwitchPreference android:icon="@drawable/ic_featured_video_24px" android:layout="@layout/preference_with_margin" android:title="@string/pref_title_stabilization" android:key="stabilization" android:defaultValue="false" />
    <SwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_title_manualfocuszoom" android:key="manualfocuszoom_enable" android:summary="@string/pref_description_manualfocuszoom" android:defaultValue="true" />
    <SwitchPreference android:icon="@drawable/quantum_ic_volume_up_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_title_shuttersounds" android:key="shutter_sounds_enable" android:summary="@string/pref_description_shuttersounds" android:defaultValue="true" />
    <SwitchPreference android:icon="@drawable/ic_brightness_24dp" android:layout="@layout/preference_with_margin" android:title="@string/pref_title_brightness" android:key="max_brightness" android:summary="@string/pref_description_brightness" android:defaultValue="false" />
    <SwitchPreference android:icon="@drawable/ic_album_24dp" android:layout="@layout/preference_with_margin" android:title="@string/pref_title_default_gallery" android:key="default_gallery_app" android:defaultValue="false" />
    <PreferenceScreen android:icon="@drawable/quantum_ic_touch_app_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_gesture_title" android:key="pref_category_gestures" android:order="2">
        <ListPreference android:icon="@drawable/quantum_ic_volume_up_grey600_24" android:entries="@array/pref_volumekey_titles" android:layout="@layout/preference_with_margin" android:title="@string/pref_title_volumekey" android:key="volumekey" android:defaultValue="1" android:entryValues="@array/pref_volumekey_values" />
		<ListPreference android:icon="@drawable/quantum_ic_touch_app_grey600_24" android:entries="@array/pref_doubletap_titles" android:layout="@layout/preference_with_margin" android:title="@string/double_tap" android:key="doubletap" android:defaultValue="1" android:entryValues="@array/pref_doubletap_values" />
        <PreferenceScreen android:icon="@drawable/ic_fingerprint_24dp" android:layout="@layout/preference_with_margin" android:title="@string/fingerprint_service_summary" android:key="cat_fingerprint">
            <SwitchPreference android:title="@string/pref_title_gestures_enable" android:key="fingerprint_gestures_enable" android:summary="@string/pref_description_gesture_enable" android:defaultValue="false" />
            <PreferenceCategory android:title="@string/fingerprint_cat_app_foreground">
                <ListPreference android:entries="@array/pref_fingerprint_actions_titles" android:title="@string/pref_title_fingerprint_swipe_left" android:key="fingerprint_swipe_left" android:dependency="fingerprint_gestures_enable" android:defaultValue="0" android:entryValues="@array/pref_fingerprint_actions_values" />
                <ListPreference android:entries="@array/pref_fingerprint_actions_titles" android:title="@string/pref_title_fingerprint_swipe_right" android:key="fingerprint_swipe_right" android:dependency="fingerprint_gestures_enable" android:defaultValue="0" android:entryValues="@array/pref_fingerprint_actions_values" />
                <ListPreference android:entries="@array/pref_fingerprint_actions_titles" android:title="@string/pref_title_fingerprint_swipe_up" android:key="fingerprint_swipe_up" android:dependency="fingerprint_gestures_enable" android:defaultValue="0" android:entryValues="@array/pref_fingerprint_actions_values" />
                <ListPreference android:entries="@array/pref_fingerprint_actions_titles" android:title="@string/pref_title_fingerprint_swipe_down" android:key="fingerprint_swipe_down" android:dependency="fingerprint_gestures_enable" android:defaultValue="0" android:entryValues="@array/pref_fingerprint_actions_values" />
                <SwitchPreference android:title="@string/pref_title_gestures_filmstrip_enable" android:key="fingerprint_filmstrip_enable" android:summary="@string/pref_description_gesture_filmstrip_enable" android:dependency="fingerprint_gestures_enable" android:defaultValue="false" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/fingerprint_cat_app_background">
                <ListPreference android:entries="@array/pref_fingerprint_actions_back_titles" android:title="@string/pref_title_fingerprint_swipe_left" android:key="fingerprint_back_swipe_left" android:dependency="fingerprint_gestures_enable" android:defaultValue="0" android:entryValues="@array/pref_fingerprint_actions_back_values" />
                <ListPreference android:entries="@array/pref_fingerprint_actions_back_titles" android:title="@string/pref_title_fingerprint_swipe_right" android:key="fingerprint_back_swipe_right" android:dependency="fingerprint_gestures_enable" android:defaultValue="0" android:entryValues="@array/pref_fingerprint_actions_back_values" />
                <ListPreference android:entries="@array/pref_fingerprint_actions_back_titles" android:title="@string/pref_title_fingerprint_swipe_up" android:key="fingerprint_back_swipe_up" android:dependency="fingerprint_gestures_enable" android:defaultValue="0" android:entryValues="@array/pref_fingerprint_actions_back_values" />
                <ListPreference android:entries="@array/pref_fingerprint_actions_back_titles" android:title="@string/pref_title_fingerprint_swipe_down" android:key="fingerprint_back_swipe_down" android:dependency="fingerprint_gestures_enable" android:defaultValue="0" android:entryValues="@array/pref_fingerprint_actions_back_values" />
            </PreferenceCategory>
        </PreferenceScreen>
	</PreferenceScreen>
	<SwitchPreference android:icon="@drawable/theme_light_dark" android:layout="@layout/preference_with_margin" android:title="@string/dark_theme" android:key="darktheme" android:defaultValue="false" />
</PreferenceScreen>